--- a/project/package.json
+++ b/project/package.json
@@ -12,7 +12,9 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
@@ -20,6 +22,7 @@
     "nodemon": "^2.0.7",
     "npm": "^7.6.3",
     "path": "^0.12.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^4.0.0"
   }
 }
