--- a/project/package.json
+++ b/project/package.json
@@ -23,6 +23,7 @@
     "npm": "^7.6.3",
     "path": "^0.12.7",
     "request": "^2.88.2",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "uuid": "^8.3.2"
   }
 }
