--- a/project/package.json
+++ b/project/package.json
@@ -22,8 +22,8 @@
     "nodemon": "^2.0.7",
     "npm": "^7.6.3",
     "path": "^0.12.7",
+    "randomstring": "^1.1.5",
     "request": "^2.88.2",
-    "socket.io": "^4.0.0",
-    "uuid": "^8.3.2"
+    "socket.io": "^4.0.0"
   }
 }
