--- a/project/.env
+++ b/project/.env
@@ -1,4 +1,4 @@
-DB_URL = mongodb://localhost:27017/MemeMory?readPreference=primary&ssl=false
+DB_URL = mongodb://127.0.0.1:27017/MemeMory?readPreference=primary&ssl=false
 PORT = 5000
 
 EXPIRY_DATE = 7d
