--- a/project/package.json
+++ b/project/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "audit": "^0.0.6",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fix": "^0.0.6",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
@@ -22,7 +24,6 @@
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "randomstring": "^1.1.5",
-    "request": "^2.88.2",
     "socket.io": "^4.4.1"
   }
 }
